tenants/htpc/old/jellyfin-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
  namespace: htpc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      containers:
        - name: jellyfin
          image: jellyfin/jellyfin
          volumeMounts:
            - name: config
              mountPath: /config
            - name: data
              mountPath: /data/videos
          ports:
            - containerPort: 8096
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: jellyfin-config
        - name: data
          persistentVolumeClaim:
            claimName: qbitt-download
