tenants/htpc/old/radarr-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: radarr
  template:
    metadata:
      labels:
        app: radarr
    spec:
      containers:
        - name: radarr
          image: linuxserver/radarr
          volumeMounts:
            - name: config
              mountPath: /config
            - name: videos
              mountPath: /movies
            - name: downloads
              mountPath: /downloads
          ports:
            - containerPort: 7878
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: radarr-config
        - name: videos
          persistentVolumeClaim:
            claimName: jellyfin-videos
        - name: downloads
          persistentVolumeClaim:
            claimName: qbitt-download
