tenants/htpc/old/emby-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: emby-svc
  namespace: htpc
spec:
  selector:
    app: emby
  ports:
    - port: 8096
      targetPort: 8096
      protocol: TCP
  type: ClusterIP
