tenants/htpc/old/jellyfin-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin-svc
  namespace: htpc
spec:
  selector:
    app: jellyfin
  ports:
    - port: 8096
      targetPort: 8096
      protocol: TCP
  type: ClusterIP
