tenants/htpc/old/qbittorrent-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent-svc
  namespace: htpc
spec:
  selector:
    app: qbittorrent
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  type: ClusterIP
