tenants/htpc/old/emby-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: emby
  namespace: htpc
  annotations:
    kubernetes.io/ingress.class: nginx
    ingress.kubernetes.io/force-ssl-redirect: "true"
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  ingressClassName: nginx
  rules:
    - host: emby.manhattan.uxn.nl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: emby-svc
                port:
                  number: 8096
  tls:
    - hosts:
        - emby.manhattan.uxn.nl
      secretName: emby-tls-secret
