tenants/htpc/old/jellyfin-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin
  namespace: htpc
  annotations:
    kubernetes.io/ingress.class: nginx
    ingress.kubernetes.io/force-ssl-redirect: "true"
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  ingressClassName: nginx
  rules:
    - host: jf.manhattan.uxn.nl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jellyfin-svc
                port:
                  number: 8096
  tls:
    - hosts:
        - jf.manhattan.uxn.nl
      secretName: jellyfin-tls-secret
